--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,8 @@
     <style name="AppTheme.ContactForm.EditText" parent="Widget.AppCompat.EditText">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">24dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:layout_marginBottom">12dp</item>
     </style>
 
     <!-- Style of the Button used in the Contact Form activity -->
@@ -38,7 +39,7 @@
     <!-- Style of the HorizontalDivider view elements used in the Contact Info activity -->
     <style name="AppTheme.ContactInfo.HorizontalDivider" parent="AppTheme">
         <item name="android:layout_height">1dp</item>
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:background">@color/colorLightGray</item>
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:layout_marginBottom">16dp</item>
